# myself

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  sqlx-data.json
examples/complex/: main.rs
examples/graphql/: main.rs
examples/graphql-server/: main.rs
examples/minimal/: main.rs
examples/neural-linux/: main.rs
examples/simple/: main.rs
src/: agent.rs  agent_builder.rs  backend.rs  database.rs  lib.rs  llm.rs  main.rs
src/backend/: core.rs  mod.rs  openai.rs
src/database/: engine.rs  memory.rs  mod.rs  models.rs
src/sdk/: interaction.rs  interactions.rs  mod.rs
src/sdk/agent/: builder.rs  methods.rs  mod.rs  structure.rs
