[package]
name = "myself"
version = "0.2.4"
edition = "2021"

license = "MIT"
description="Myself is a Rust library for building conversational agents powered by OpenAI's language model, providing a simple Agent abstraction to manage interactions and memory."
homepage = "https://community.minsky.cc/projects/myself"
repository = "https://github.com/minskylab/myself"
documentation = "https://docs.rs/myself"
readme = "README.md"

[dependencies]
anyhow = "1.0.69"
rbatis = "4.0.58"
rbdc = "0.1.23"
rbdc-sqlite = "0.1.17"
rbs = "0.1.15"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }


[dev-dependencies]
async-graphql = "5.0.6"
async-graphql-warp = "5.0.6"
warp = "0.3.3"
http = "0.2.9"
dotenvy = "0.15.6"
