[package]
name = "myself"
version = "0.4.0"
edition = "2021"

license = "MIT"
description="Myself is a Rust library for building conversational agents powered by OpenAI's language model, providing a simple Agent abstraction to manage interactions and memory."
homepage = "https://community.minsky.cc/projects/myself"
repository = "https://github.com/minskylab/myself"
documentation = "https://docs.rs/myself"
readme = "README.md"

[dependencies]
anyhow = "1.0.70"
rbatis = "4.3.0"
rbdc = "4.3.1"
rbdc-sqlite = "4.3.0"
rbs = "4.3.2"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_derive = "1.0.159"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }

[dev-dependencies]
async-graphql = "5.0.7"
async-graphql-warp = "5.0.7"
warp = "0.3.4"
http = "0.2.9"
dotenvy = "0.15.7"

