[package]
name = "myself"
version = "0.5.0"
edition = "2021"

license = "MIT"
description="Myself is a Rust library for building conversational agents powered by OpenAI's language model, providing a simple Agent abstraction to manage interactions and memory."
homepage = "https://community.minsky.cc/projects/myself"
repository = "https://github.com/minskylab/myself"
documentation = "https://docs.rs/myself"
readme = "README.md"

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.24"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.160"
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls", "uuid", "time", "chrono", "offline"] }
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
uuid = { version = "1.3.1", features = ["v4"] }

[dev-dependencies]
async-graphql = "5.0.7"
async-graphql-warp = "5.0.7"
warp = "0.3.4"
http = "0.2.9"
dotenvy = "0.15.7"

